<resources>
    <string name="app_name">NYKD Twitter Application</string>
    <string name="username"><![CDATA[<Username>]]></string>
    <string name="date"><![CDATA[<Date>]]></string>
    <string name="text_here"><![CDATA[<Text here>]]></string>
    <string name="rnm"><![CDATA[<RNM>]]></string>
    <string name="fnm"><![CDATA[<FNM>]]></string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username_placeholder"><![CDATA[<Username placeholder>]]></string>
    <string name="tag_placeholder"><![CDATA[<@tag placeholder>]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chosen_user_s_name_placeholder"><![CDATA[<Chosen user\'s name placeholder>]]></string>
    <string name="description_placeholder"><![CDATA[<Description placeholder>]]></string>
    <string name="fc"><![CDATA[<FC#>]]></string>
    <string name="fv"><![CDATA[<FV#>]]></string>
    <string name="st"><![CDATA[<ST#>]]></string>
</resources>
