<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/userName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/date"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userName_tv"
            android:layout_marginTop="3dp"
            android:text="@string/text_here"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/favourite_bttn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:focusable="false"
            android:text="@string/fnm"
            android:layout_below="@+id/tweet_imageView"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/retweet_bttn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignBottom="@id/favourite_bttn"
            android:layout_toEndOf="@+id/favourite_bttn"
            android:focusable="false"
            android:text="@string/rnm" />

        <ImageView
            android:id="@+id/tweet_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_below="@+id/content_tv" />
    </RelativeLayout>
</LinearLayout>