<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yorankerbusch.nykdtwitterapplication.fragments.UserPageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_user_account"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <ListView
            android:id="@+id/lv_user_tweets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_followers_user_account"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_name_user_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/iv_user_account"
            android:text="@string/chosen_user_s_name_placeholder"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_description_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_user_account"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/tv_name_user_account"
            android:layout_below="@+id/tv_name_user_account"
            android:layout_marginTop="5dp"
            android:text="@string/description_placeholder"
            android:textColor="@android:color/black"
            android:maxLines="5"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/tv_followers_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_user_account"
            android:text="@string/fc"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_favorites_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fv"
            android:textColor="@android:color/black"
            android:layout_below="@+id/iv_user_account"
            android:layout_toEndOf="@+id/tv_followers_user_account"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_statuses_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st"
            android:textColor="@android:color/black"
            android:layout_below="@+id/iv_user_account"
            android:layout_toEndOf="@+id/tv_favorites_user_account"
            android:layout_marginStart="10dp" />
    </RelativeLayout>
</FrameLayout>
